style.css
body {
    font-family: "Titillium Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/* general section padding */
section {
    padding: 5rem 0;
}

h1, .lead {
    text-align: center;
}

html.js .scrollreveal {
    visibility: hidden;
}

#home-slogan {
    animation-delay: 500ms;
}

#home-lead {
    animation-delay: 1000ms;
}

#home-buttons {
    animation-delay: 2000ms;
}

#home-bottom-button {
    animation-delay: 2500ms;
}

.btn-primary {
    background-color: #880000;
    border-color: #880000;
}

.btn-primary:hover {
    background-color: #660000;
    border-color: #660000;
}

.btn-primary:not([disabled]):not(.disabled):active {
    background-color: #660000;
    border-color: #440000;
    box-shadow: 0 0 0 .2rem rgba(68, 0, 0, .5)
}

.btn-primary:focus {
    box-shadow: 0 0 0 .2rem rgba(68, 0, 0, .5)
}

/******************************/
/*         NAVIGATION         */
/******************************/

.navbar-animated, .navbar-animated .nav-link, .navbar-animated .navbar-brand img {
    transition: 200ms all ease;
}

.navbar-brand img {
    width: 150px;
}

nav ul li a:hover {
    background-color: #fff;

}

nav ul li a {
    display: block;
    text-decoration: none;
    padding: 40px 60px;
    font-size: 20px;
    font-weight: 300;
    color: #323642;
}

.bg-dark {
    background-color: rgb(48, 48, 48) !important;
}

#site-navigation .nav-link:hover {
    background-color: transparent;
}

@media screen and (min-width: 992px) {
    html.js .nav-top .navbar-brand img {
        width: 250px;
    }

    html.js .nav-top {
        background-color: transparent !important;
    }

    html.js .nav-top .nav-link {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }
}

/******************************/
/*            HOME            */
/******************************/

section#home {
    display: block;
    color: white;
    padding: 0;
    height: 100vh;
}

.video-background {
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.video-background .background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -100;
    background-size: cover;
    overflow: hidden;
    background: black center;
}

.video-background .background video {
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    opacity: 0.4;
}

.video-background .overlay {
    margin-top: 3rem;
    text-align: center;
}

.video-background .bottom-button {
    position: absolute;
    bottom: 0;
    cursor: pointer;
    animation-delay: 2500ms;
}

.video-background .bottom-button .chevron {
    width: 3rem;
    margin-top: -2.5rem;
    opacity: 0.5;
    transition: 500ms all ease;
    transform: translate(0, -1rem);
}

.video-background .bottom-button:hover .chevron {
    opacity: 1;
    transform: translate(0, 0);
}

/******************************/
/*          FEATURES          */
/******************************/
section#features {

}

.feature {
    text-align: center;
}

.feature > .icon {
    width: 10rem;
    height: 10rem;
    padding: 2rem;
    text-align: center;
    display: inline-block;
}

.feature > .icon > img {
    max-width: 100%;
    max-height: 100%;
    display: inline-block;
}

/******************************/
/*           PRICING          */
/******************************/

section#pricing {
    background-color: #222;
    color: white;
}

.pricing-tier {
    text-align: center;
}

.pricing-tier .name {
    display: block;
    font-size: 1.2rem;
    padding: 0.5rem;
    font-weight: 300;
    border-radius: 0.5rem 0.5rem 0 0;
}

.pricing-tier .cost {
    font-size: 5rem;
    font-weight: 300;
    display: block;
}

.pricing-tier .cost::before {
    content: "$";
    font-size: 1.75rem;
    position: relative;
    top: -2.25rem;
}

.pricing-tier .cost::after {
    content: "/ session*";
    font-size: 1.75rem;
    position: relative;
    bottom: 0rem;
}

.pricing-tier .features {
    list-style: none;
    padding: 0;
    margin: 0;
    font-size: 1.25rem;
}

.pricing-tier .features li {
    padding: 0.5rem 0;
    border-bottom: 2px solid #444;
}

/******************************/
/*            TEAM            */
/******************************/

section#team {

}

.team-member {
    text-align: center;
    margin: 1rem 0;
}

.team-member .hover-reveal {
    position: relative;
}

.team-member .hover-reveal .background {
    opacity: 1;
    transition: 200ms all ease;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.team-member .background img {
    border-radius: 100px;
}

.team-member .title {
    text-transform: uppercase;
}

.team-member .hover-reveal .overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: 200ms all ease;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: default;
}

.team-member .hover-reveal .description {
    margin: 0;
}

.team-member .hover-reveal:hover .background {
    opacity: 0.33;
    filter: blur(3px);
}

.team-member .hover-reveal:hover .overlay {
    opacity: 1;
}

/******************************/
/*           FOOTER           */
/******************************/

footer {
    background: #222;
    padding: 1rem;
    color: #888;
}

